clean up sass, fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,6 @@ body {
   margin-top: 8.5rem;
   font-size: 2rem;
   font-weight: 700;
-  color: #15202A;
   text-transform: uppercase;
 }
 
@@ -168,10 +167,11 @@ body {
 .widgets .widget {
   width: 3rem;
   height: 3rem;
+  margin-right: 1.2rem;
 }
 
 footer {
-  margin-top: 3rem;
+  margin: 3.2rem 0;
   color: #969696;
   font-weight: 300;
   font-size: 1rem;
